--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,24 +2,33 @@
   "manifest_version": 3,
   "name": "PDF Downloader",
   "description": "A chrome extension to download pdfs",
-  "permissions": ["printing", "debugger", "downloads", "activeTab", "scripting"],
+  "permissions": [
+    "printing",
+    "debugger",
+    "downloads",
+    "activeTab",
+    "scripting"
+  ],
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
-  "host_permissions": ["https://stg.siim.jp/*"],
+  "host_permissions": [
+    "https://stg.siim.jp/*",
+    "https://aireport-stg.siim.jp/*"
+  ],
   "action": {
-    "default_title": "PDF Downloader"
+    "default_popup": "popup.html",
+    "default_icon": "icon-34.png"
   },
   "icons": {
     "128": "icon-128.png"
   },
   "content_scripts": [
     {
-      "matches": ["https://stg.siim.jp/*"],
+      "matches": ["https://stg.siim.jp/*", "https://aireport-stg.siim.jp/*"],
       "js": ["contentScript.bundle.js"],
       "css": ["content.styles.css"]
     }
   ],
-  "devtools_page": "devtools.html",
   "web_accessible_resources": [
     {
       "resources": ["content.styles.css", "icon-128.png", "icon-34.png"],
